--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -29,6 +29,25 @@ $pdp-top: $header-height + $secondary-header-height;
     top: $header-height + $secondary-header-height + 23px;
 }
 
+// .view-in-btn{
+//     height: 50px;
+//     width: 145px;
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+//     .text{
+//         font-family: $font-Montserrat;
+//         font-size: 12px;
+//         color: #191919;
+//         letter-spacing: 0.5px;
+//     }
+//     img {
+//         cursor: pointer !important;
+//         height: 40px;
+//         width: 40px !important;
+//     }
+// }
+
 .product-image-container {
     user-select: none;
     // padding-left: 40px;
@@ -36,6 +55,43 @@ $pdp-top: $header-height + $secondary-header-height;
     display: grid;
     column-gap: 4px;
     row-gap: 4px;
+    position: relative;
+
+    .product-image{
+        position: relative;
+        .view-in-btn{
+            height: 45px;
+            width: 145px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            position: absolute;
+            bottom: 35px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #ffffff;
+            opacity: 90%;
+            .text{
+                font-family: $font-Montserrat;
+                font-size: 12px;
+                color: #191919;
+                letter-spacing: 0.5px;
+            }
+            img {
+                cursor: pointer !important;
+                height: 40px;
+                width: 40px !important;
+            }
+        }
+    }
+
+    .pdp-top{
+        height: 44px;
+        width: 40px;
+        position: absolute;
+        top: 16px;
+        left: 16px;
+    }
 
     // Even number of images
     &.even{
