Shop The Look Done

--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -165,7 +165,9 @@ $pdp-top: $header-height + $secondary-header-height;
     border: none;
     border-radius: 0;
     cursor: pointer;
-    bottom: 50px;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
     position: absolute ;
     right: 0;
     padding: 0 10px;
