Error State GC and CN

--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -540,6 +540,9 @@ input[type="text"]{
     align-items: center;
     margin-bottom: 5px;
   }
+  .balance-input{
+    position: relative;
+  }
   .txt-width60 {
     width: 60%;
   }
