--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -26,9 +26,11 @@
             height: 90vh;
 
             @media screen and (max-width:992px) {
-                height: 100vh;
+                // height: 100vh;
+                height: 100%;
                 margin: 0;
                 padding: 30px 30px 0 30px;
+                overflow-y: auto;
             }
 
     
