--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -91,6 +91,7 @@ $pdp-top: $header-height + $secondary-header-height;
         position: absolute;
         top: 16px;
         left: 16px;
+        cursor: pointer;
     }
 
     // Even number of images
