--- a/src/containers/newGiftcard/styles.scss
+++ b/src/containers/newGiftcard/styles.scss
@@ -15,14 +15,89 @@ $sale-timer-height:50px;
     height: 100%;
     .container{
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-between;
         min-width: 991px;
-        
+        margin-top: 70px;
         .preview-gc{
-            min-width: 470px;
+            min-width: 370px;
+            max-width: 470px;
             background-color: #f8f8f8;
-            height: 100px;
+            .title {
+                @include b4_12px_montserrat_charcoal_caps();
+                color: #9f9f9f;
+                text-align: center;
+                letter-spacing: 0.5px;
+                line-height: 45px;
+                border-bottom: 2px solid #fff;
+            }
+            .image-container{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    height: 190px;
+                    border-radius: 20px;
+                    margin: 25px auto;
+                }
+            }
+            .salutation{
+                @include b3_14px_montserrat_medium_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+            }
+            .static-msg{
+                @include b3_14px_montserrat_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                margin: 10px;
+            }
+            .gc-amount{
+                font-family: $font-Montserrat;
+                font-size: 20px;
+                color: #7EAAA9;
+                text-align: center;
+                line-height: 30px;
+                height: 30px;
+            }
+            .sender-name{
+                @include b3_14px_montserrat_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                margin-bottom: 30px;
+            }
+            .their-message{
+                @include b4_12px_montserrat_light_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                line-height: 20px;
+            }
+            .message{
+                @include b3_14px_montserrat_medium_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                line-height: 20px;
+                margin-bottom: 30px;
+            }
+            .dummy-code {
+                text-align: center;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                span {
+                    display: inline-block;
+                    height: 50px;
+                    line-height: 50px;
+                    width: 200px;
+                    border: 1px dashed #9f9f9f;
+                }
+            }
+            .note{
+                @include b5_10px_montserrat_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                width: 51%;
+                margin: 0px auto 35px auto;
+            }
         }
 
         .form-gc{
@@ -278,9 +353,11 @@ $sale-timer-height:50px;
                 color: white;
                 background-color: #9f9f9f;
                 text-align: center;
-                cursor: pointer;
+                pointer-events: none;
                 &.active{
                     background-color: #7EAAA9;
+                    cursor: pointer;
+                    pointer-events: unset;
                     &:hover{
                         border: 1px solid #7EAAA9;
                         background-color: #FFFFFF;
@@ -304,6 +381,214 @@ $sale-timer-height:50px;
                     letter-spacing: 0.5px;
                     &:not(:first-child){
                         margin-top: 12px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 767px){
+    .page-container{
+        display: block;
+        position: relative;
+        .preview-modal{
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            height: calc(100vh - 60px);
+            background-color: #ffffff;
+            width: 100%;
+            z-index: 12;
+            overscroll-behavior: contain;
+            .back-to-gc-details{
+                position: sticky;
+                top: 0;
+                div {
+                    background-color: #f9f8f5;
+                }
+                .text{
+                    height: 40px;
+                    line-height: 40px;
+                    text-align: center;
+                    font-size: 12px;
+                    font-family: $font-Montserrat;
+                    letter-spacing: 0.50px;
+                }
+                .carret-container{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 50px;
+                    height: 25px;
+                    border-radius: 0 0 25px 25px;
+                    transform: translateX(-50%) translateY(-10px);
+                    left: 50%;
+                    position: relative;
+                    .carret-down{
+                        height: 9px;
+                        width: 9px;
+                        transform: rotate(225deg);
+                        border: 1px solid black;
+                        border-right: none;
+                        border-bottom: none;
+                    }
+                }
+            }
+            .title {
+                @include b4_12px_montserrat_charcoal_caps();
+                color: #9f9f9f;
+                text-align: center;
+                letter-spacing: 0.5px;
+                line-height: 45px;
+                border-bottom: 2px solid #fff;
+            }
+            .image-container{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    height: 190px;
+                    border-radius: 20px;
+                    margin: 25px auto;
+                }
+            }
+            .salutation{
+                @include b3_14px_montserrat_medium_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+            }
+            .static-msg{
+                @include b3_14px_montserrat_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                margin: 10px;
+            }
+            .gc-amount{
+                font-family: $font-Montserrat;
+                font-size: 20px;
+                color: #7EAAA9;
+                text-align: center;
+                line-height: 30px;
+                height: 30px;
+            }
+            .sender-name{
+                @include b3_14px_montserrat_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                margin-bottom: 30px;
+            }
+            .their-message{
+                @include b4_12px_montserrat_light_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                line-height: 20px;
+            }
+            .message{
+                @include b3_14px_montserrat_medium_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                line-height: 20px;
+                margin-bottom: 30px;
+            }
+            .dummy-code {
+                text-align: center;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                span {
+                    display: inline-block;
+                    height: 50px;
+                    line-height: 50px;
+                    width: 200px;
+                    border: 1px dashed #9f9f9f;
+                }
+            }
+            .note{
+                @include b5_10px_montserrat_charcoal();
+                letter-spacing: 0.5px;
+                text-align: center;
+                width: 51%;
+                margin: 0px auto 35px auto;
+            }
+        }
+        .preview-trigger{
+            position: sticky;
+            left: 0px;
+            bottom: 60px;
+            z-index: 7;
+            width: 100%;
+            div{
+                background-color: #f9f8f5;
+            }
+            .carret-container{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 50px;
+                height: 25px;
+                border-radius: 25px 25px 0 0;
+                transform: translateX(-50%) translateY(10px);
+                left: 50%;
+                position: relative;
+                .carret-up{
+                    height: 9px;
+                    width: 9px;
+                    transform: rotate(45deg);
+                    border: 1px solid black;
+                    border-right: none;
+                    border-bottom: none;
+                }
+            }
+            .text{
+                height: 35px;
+                line-height: 35px;
+                text-align: center;
+                font-size: 12px;
+                font-family: $font-Montserrat;
+                letter-spacing: 0.50px;
+            }
+        }
+        .add-to-bag {
+            position: sticky;
+            bottom: 0px;
+            left: 0px;
+            z-index: 7;
+            width: 100%;
+            height: 60px;
+            @include b3_14px_montserrat_caps_charcoal();
+            letter-spacing: 0.5px;
+            line-height: 60px;
+            color: white;
+            background-color: #9f9f9f;
+            text-align: center;
+            cursor: pointer;
+            &.active{
+                background-color: #7EAAA9;
+            }
+            &.preview-open {
+                position: fixed;
+            }
+            
+        }
+        .container {
+            min-width: unset;
+            flex-direction: column-reverse;
+            position: relative;
+            .form-gc{
+                padding: 35px 20px 0px 20px;
+                .card-design {
+                    .designs-container{
+                        .img-options{
+                            img {
+                                width: 102px;
+                            }
+                        }
+                    }
+                }
+
+                .card-value{
+                    .prices-container{
+                        width: 106px;
                     }
                 }
             }
