--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1300,6 +1300,10 @@ visibility: visible !important;
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0 7%;
+
+  &.collection-n{
+    padding: 0;
+  }
   a {
     @include b3_14px_montserrat_charcoal();
     text-transform: capitalize;
@@ -1761,6 +1765,15 @@ ul.inner-menu-mobile {
 .collection {
     width: 35%;
     margin-left: 5px;
+    .slider-image{
+    
+      @media screen and (min-width:992px) {
+        object-fit: cover;
+        height: 113px;
+        width: 223px;
+      }
+     
+    }
    .title{
     @include b4_12px_montserrat_light_charcoal();
     margin-top: 5px;
