--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1763,7 +1763,7 @@ ul.inner-menu-mobile {
   padding: 0 10.2rem;
 }
 .collection {
-    width: 35%;
+    // width: 35%;
     margin-left: 5px;
     .slider-image{
     
