modified reward section

--- a/src/containers/myAccount/components/CeriseDashboard/styles.scss
+++ b/src/containers/myAccount/components/CeriseDashboard/styles.scss
@@ -161,9 +161,9 @@
         }
 
     }
-    .opacity-div{
-            opacity: 0.4
-    }
+    // .opacity-div{
+    //         opacity: 0.4
+    // }
 }
 
 //==================Address section=========================//
