--- a/src/containers/giftcard/styles.scss
+++ b/src/containers/giftcard/styles.scss
@@ -415,7 +415,7 @@ input[type="radio"]:checked+label:before {
   }
   input[type="number"] {
     background-color: #fff;
-    padding: 15px 15px 15px 48px;
+    padding: 15px 15px 15px 16%;
     width: 100%;
     -moz-appearance: textfield;
     border: 1px solid $white !important;;
