--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1854,8 +1854,8 @@ ul.inner-menu-mobile {
 }
 .trendingdesktopPad {
   // padding-left: 10.2rem;
-  margin-left: 38%;
-  width: 100%;
+  margin-left: 17%;
+  width: 100vw;
 }
 
 .icon-cross {
