--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -55,6 +55,32 @@ $pdp-top: $header-height + $secondary-header-height;
 //     }
 // }
 
+.view-in-btn{
+    height: 45px;
+    width: 145px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    bottom: 35px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ffffff;
+    opacity: 90%;
+    cursor: pointer;
+    .text{
+        font-family: $font-Montserrat;
+        font-size: 12px;
+        color: #191919;
+        letter-spacing: 0.5px;
+    }
+    img {
+        cursor: pointer !important;
+        height: 40px;
+        width: 40px !important;
+    }
+}
+
 .product-image-container {
     user-select: none;
     // padding-left: 40px;
@@ -78,6 +104,7 @@ $pdp-top: $header-height + $secondary-header-height;
             transform: translateX(-50%);
             background-color: #ffffff;
             opacity: 90%;
+            cursor: pointer;
             .text{
                 font-family: $font-Montserrat;
                 font-size: 12px;
